# estatistica

./: .editorconfig  .git-ignore-original  .gitattributes  .gitignore  .gitignore-original-reserva-save  .gitmodules  .htaccess  404.html  ATIVIDADE  CNAME  HEAD.html  README.md  Untitled-1.html  _redirects  a.html  add_breadcrumbs.py  app.js  apple-02.html  apple.html  code-estrutura.html  completo.html  config.html  diff-gitignore  estrutura-noticias.txt  fix-globalaside-paths.ps1  fix-globalheader-paths.ps1  footer.html  head-metatag.html  head-metatag.md  home_main.html  ina-obj.txt  index.html  index.txt  index5.html  indexPrimary.html  links.html  links.txt  lista-template.txt  meta-tag.html  names-rapidos.txt  (+19 more)
.automacao/: corrigir-qualquer-coisa.py  index_vazio.py  renomear_https_paths.py  sitemap.py  template-banners.py  template-index-vazio.py
.git - Copy/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
.git - Copy/logs/: HEAD
.github/: .gitignore  README.md  commits-pattern.md  copilot-instructions.md  estrutura-dir-newsroom.md  padrao-ssh.md
.github/ISSUE_TEMPLATE/: accessibility.md  blank.md  bug_report.md  config.yml  content_improvement.md  custom.md  disciplina_suggestion.md  feature_request.md  feedback_ux.md  ira_calculator.md  technical_issue.md
.github/copilot/: .copilot-instructions.md  code-style.md  commit-conventions.md  copilot-commit-message-instructions.md  copilot-instructions-commits.md  copilot-instructions.md  documentation.md  file-editing.md  instructions.md  testing.md
.github/docs/: JOIN_REPO.md  PATTERNS.qmd  _JOIN_REPO_.md  _VENV_.md
.github/estruturas/: commit-patterns.md
.github/estruturas-e-documentacao/: estrutura-newsroom.txt
.github/guides/: PADRAO.md  PRETTIER.qmd  SSH-PADROES.qmd
.github/ideias/: ideias.md  ideias.txt
.github/instructions/: semdocumentoexplicativo.instructions.md
.github/submodule/: update-submodules.ps1  update-submodules.sh
.github/workflows/: codeql.yml  componentes.yml  deploy.yml  github.pages.yml  hostinger.yml  livros.yml  novas-actions.txt  pages.yml  rederbooks.yml  renderbooks.yml  renderlivros.yml  sm_v3.yml  static.yml  static_dev1.yml  submodule.yml  submodules.yml  submodules_v2.yml  submodules_v3.yml  update-submodules.yml
API/: ideia-00.txt
_backend_/: NEWSROOM.md  _OBJETIVOS_.md
_backend_/_automacaoRepositorio_/: renomear_path.py
_backend_/data/: article.json  articles.json
ac/: README.md  ac-link-head.html  include-links-in-head.html
ac/books/: custombooks.css  homebooks.css
ac/globalheader/: fatorar_header.css
ac/globalnavbar/: README-atualizacao.md
ac/globalnewsroom/: README.md
ac/globalnoticias/: README.md
api/: requirements.txt
api/core/: sessions.py
api/test/: _test_ementa_disciplina_.py
apple/: ac-globalfooter.built.css  ac-localnav.built.css  globalheader.css  index.html  main.built.css  modal.css
apps/ira/: README.md  index.html
backend/: .gitignore  BACKEND.md  MANIFEST.in  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/core/: FEATURES.txt  __init__.py  dir.py  quartorender.py  quartorender_test.py  setup.py  variaveis.py
backend/core/book/: booksguide.py  read.py
backend/core/books/: functions.py  readmd.py  readqmd.py  search.json.py
backend/core/core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/core/dir/: dir.py  list_paths_folders.py  listdir.txt  readfile.py
backend/data/: articles.json
backend/data/books/: books.json  include-in-body
backend/newshub/: README.md
backend/newsroom/: index.html  iterativo.py  resto_funcoes.py
backend/newsroom/assets/pt_BR/articles/styles/: articles.css
backend/repositorio/: create_dir.py
backend/scripts/globalribbon/: globalribbon.json  globalribbon.py
backend/scripts/newsroom/posts/python/: utils.py
backend/src/backend/: __init__.py  diretorio.py  quartorender.py
backend/src/backend/core/: __init__.py  diretorio.py  requirements.txt
backend/src/test/: renderbook.py
backend/tasks/books/: renderbook.py
backend/test/: renderbooks.py  test_dir.py  test_quartorender.py
backend/tools/: renderbook.py
boasvindas/: README.md  boasvindas_links.txt  index.html
book/: index.html
book/CIC0007/: index.html  search.json
book/EST0033/: index.html  search.json
book/MAT0075/: index.html  notas_temp.html  search.json
book/TAS0000/: index.html  search.json
books/: .gitignore  BOOKS.md  CNAME  README.md  index.html
books/CIC0007/: index.html
contato/: index.html
dados-estruturados/: favicon.xml
docente/: index.html  main.css
errors/: 401.html  403.html  404.html  500.html  503.html
eventos/: index.html
functions/: handle-error.js
guides/: JOIN_REPO.html  NEWSROOM.html  NEWSROOM.md  PATTERNS.html  PATTERNS.md  PRETTIER.html  VENV.html  _JOIN_REPO_.md  index.html  joinrepo.html  search.json
ideias/: .txt  estrutura-e-ideias.txt  estrutura-para-css.txt  estrutura.txt  ideia-00.txt  inspiracao-paginas.txt
images/: sructure.md  sructure.txt
instalacoes/: index.html
ira/: README.md  index.html
leadership/: README.md  index.html
legal/: index.html
newsroom/: .gitignore  NEWSROOM.md  README.md  articles.json  estrutura-dir-newsroom.txt  estrutura.md  index.html  lista-artigos.json
noticias/: index.html
pages/: README.md
pattern/: Apple_mainFooter.html  file-system-website.txt  patterns-names-estrutauras-class-ids.txt  structureFinal-site.html
posgraduacao/: index.html
resto_codigo/: home_main.html  navbar_apple.html
sd/: README.md  sructure.md
sitemap/: est.unb.br_links.txt  index.html  link_subdomin.py  sitemap.json  sitemap.txt  sitemap_v2.json  sitemap_velho.json
src/: app.js
test/: navbar.json  scripts.js  style.css  styles-test.css  teste.html  transicao.html
utils/: navbar-submenu.html  scripts.js  style.css  teste.html
v/: paginas.txt
webSitePartes/: a-metaTags.html  b-NavbarHeaderSection.html  c-main.html  e-footer.html
wss/: font.css  fonts.css
z-Ideias/: ideia-00.txt  slide-noticias.html
(+602 files in other folders)
