[project]
name = "backend"
version = "0.1.0"
description = "Pacote backend para automações do repoitório de www.estatistica.pro"
readme = "README.md"
authors = [
    { name = "cesargabrielphd", email = "87340795+cesargabrielphd@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
