[project]
name = "backend"
version = "0.1.0"
description = "Pacote backend para automações do repoitório de www.estatistica.pro"
readme = "README.md"
authors = [
    { name = "cesargabrielphd", email = "87340795+cesargabrielphd@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0",
    "argon2-cffi>=23.1.0",
    "argon2-cffi-bindings>=21.2.0",
    "arrow>=1.3.0",
    "asgiref>=3.8.1",
    "asttokens>=3.0.0",
    "async-lru>=2.0.5",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "automat>=25.4.16",
    "autopep8>=2.3.2",
    "babel>=2.17.0",
    "backrefs>=5.8",
    "beautifulsoup4>=4.13.4",
    "bibtexparser>=1.4.3",
    "bleach>=6.2.0",
    "brotli>=1.1.0",
    "bs4>=0.0.2",
    "cachetools>=5.5.2",
    "certifi>=2025.4.26",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.1",
    "colorama>=0.4.6",
    "comm>=0.2.2",
    "constantly>=23.10.4",
    "cryptography>=44.0.2",
    "cssselect>=1.3.0",
    "debugpy>=1.8.14",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "distlib>=0.3.9",
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "django-redis>=5.4.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-yasg>=1.21.10",
    "et-xmlfile>=2.0.0",
    "executing>=2.2.0",
    "fastjsonschema>=2.21.1",
    "filelock>=3.18.0",
    "fqdn>=1.5.1",
    "freez>=0.0.0",
    "fsspec>=2025.3.2",
    "fuzzywuzzy>=0.18.0",
    "ghp-import>=2.1.0",
    "google>=3.0.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.0",
    "gspread-dataframe>=4.0.0",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httplib2>=0.22.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.30.2",
    "hyperlink>=21.0.0",
    "idna>=3.10",
    "incremental>=24.7.2",
    "inflection>=0.5.1",
    "instaloader>=4.14.1",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "ipython-pygments-lexers>=1.1.1",
    "ipywidgets>=8.1.6",
    "isoduration>=20.11.0",
    "itemadapter>=0.11.0",
    "itemloaders>=1.3.2",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jmespath>=1.0.1",
    "json5>=0.12.0",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2025.4.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupyter-console>=6.6.3",
    "jupyter-core>=5.7.2",
    "jupyter-events>=0.12.0",
    "jupyter-lsp>=2.2.5",
    "jupyter-server>=2.15.0",
    "jupyter-server-terminals>=0.5.3",
    "jupyterlab>=4.4.1",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.27.3",
    "jupyterlab-widgets>=3.0.14",
    "latexcodec>=3.0.0",
    "lxml>=5.4.0",
    "markdown>=3.8",
    "markupsafe>=3.0.2",
    "matplotlib-inline>=0.1.7",
    "mergedeep>=1.3.4",
    "mistune>=3.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.6.12",
    "mkdocs-material-extensions>=1.3.1",
    "mpmath>=1.3.0",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "notebook>=7.4.1",
    "notebook-shim>=0.2.4",
    "numpy>=2.2.5",
    "oauthlib>=3.2.2",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "overrides>=7.7.0",
    "packaging>=25.0",
    "paginate>=0.5.7",
    "pandas>=2.2.3",
    "pandocfilters>=1.5.1",
    "parsel>=1.10.0",
    "parso>=0.8.4",
    "pathspec>=0.12.1",
    "pillow>=11.2.1",
    "pipenv>=2025.0.1",
    "platformdirs>=4.3.7",
    "prometheus-client>=0.21.1",
    "prompt-toolkit>=3.0.51",
    "protego>=0.4.0",
    "protobuf>=6.30.2",
    "psutil>=7.0.0",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "pure-eval>=0.2.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pybtex>=0.24.0",
    "pycodestyle>=2.13.0",
    "pycparser>=2.22",
    "pydispatcher>=2.0.7",
    "pygments>=2.19.1",
    "pyjwt>=2.9.0",
    "pymdown-extensions>=10.15",
    "pymupdf>=1.25.5",
    "pyopenssl>=25.0.0",
    "pyparsing>=3.2.3",
    "pypdf2>=3.0.1",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
    "python-json-logger>=3.3.0",
    "python3-openid>=3.2.0",
    "pytz>=2025.2",
    "pywin32>=310",
    "pywinpty>=2.0.15",
    "pyyaml>=6.0.2",
    "pyyaml-env-tag>=0.1",
    "pyzmq>=26.4.0",
    "queuelib>=1.8.0",
    "redis>=5.2.1",
    "referencing>=0.36.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-file>=2.1.0",
    "requests-oauthlib>=2.0.0",
    "rfc3339-validator>=0.1.4",
    "rfc3986-validator>=0.1.1",
    "rpds-py>=0.24.0",
    "rsa>=4.9.1",
    "safetensors>=0.5.3",
    "scrapy>=2.12.0",
    "send2trash>=1.8.3",
    "service-identity>=24.2.0",
    "setuptools>=80.0.0",
    "sitemap>=20191121",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.7",
    "sqlparse>=0.5.3",
    "stack-data>=0.6.3",
    "stem>=1.8.2",
    "sympy>=1.14.0",
    "terminado>=0.18.1",
    "tinycss2>=1.4.0",
    "tldextract>=5.3.0",
    "tokenizers>=0.21.1",
    "tomli>=2.2.1",
    "torch>=2.7.0",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.51.3",
    "twisted>=24.11.0",
    "types-python-dateutil>=2.9.0.20241206",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.2",
    "unidecode>=1.4.0",
    "uri-template>=1.3.0",
    "uritemplate>=4.1.1",
    "urllib3>=2.3.0",
    "virtualenv>=20.29.3",
    "w3lib>=2.3.1",
    "watchdog>=6.0.0",
    "wcwidth>=0.2.13",
    "webcolors>=24.11.1",
    "webencodings>=0.5.1",
    "websocket-client>=1.8.0",
    "whitenoise>=6.9.0",
    "widgetsnbextension>=4.0.14",
    "zope-interface>=7.2",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
